[gd_scene load_steps=2 format=3 uid="uid://c2fp0nce8lkfm"]

[ext_resource type="Script" uid="uid://bvnavxrnvjygi" path="res://ui/notifications/demo.gd" id="1_olp5c"]

[node name="Demo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_olp5c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.5
offset_top = -20.0
offset_right = 210.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "on_item_pickup"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "server_maintenance_start"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "server_maintenance_end"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="button_down" from="VBoxContainer/Button" to="." method="_on_item_pickup"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_server_maintenance_start"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_server_maintenance_end"]
[connection signal="button_down" from="VBoxContainer/Button2" to="." method="_on_quit_button_pressed"]
